--- a/utwory.html
+++ b/utwory.html
@@ -13,6 +13,7 @@
             border: 1px solid black;
             padding: 8px;
             text-align: left;
+            cursor: pointer;
         }
         th {
             background-color: #f2f2f2;
@@ -53,6 +54,43 @@
                 rows[i].style.display = showRow ? '' : 'none';
             }
         }
+
+        function sortTable(n) {
+            const table = document.getElementById('utworyTable');
+            let rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
+            switching = true;
+            dir = "asc"; 
+            while (switching) {
+                switching = false;
+                rows = table.rows;
+                for (i = 1; i < (rows.length - 1); i++) {
+                    shouldSwitch = false;
+                    x = rows[i].getElementsByTagName("TD")[n];
+                    y = rows[i + 1].getElementsByTagName("TD")[n];
+                    if (dir == "asc") {
+                        if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+                            shouldSwitch = true;
+                            break;
+                        }
+                    } else if (dir == "desc") {
+                        if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+                            shouldSwitch = true;
+                            break;
+                        }
+                    }
+                }
+                if (shouldSwitch) {
+                    rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+                    switching = true;
+                    switchcount++;
+                } else {
+                    if (switchcount == 0 && dir == "asc") {
+                        dir = "desc";
+                        switching = true;
+                    }
+                }
+            }
+        }
     </script>
 </head>
 <body>
@@ -69,9 +107,9 @@
     <table id="utworyTable">
         <thead>
             <tr>
-                <th>Wykonawca</th>
-                <th>Tytuł</th>
-                <th>Język</th>
+                <th onclick="sortTable(0)">Wykonawca</th>
+                <th onclick="sortTable(1)">Tytuł</th>
+                <th onclick="sortTable(2)">Język</th>
             </tr>
         </thead>
         <tbody>
