Added new examples

--- a/utwory.html
+++ b/utwory.html
@@ -137,24 +137,49 @@
         </thead>
         <tbody>
             <tr>
-                <td>Artist 1</td>
-                <td>Title 1</td>
-                <td>Japońskie</td>
+            <td>BABYMETAL</td>
+            <td>Gimme Chocolate!!</td>
+            <td>Japońskie</td>
             </tr>
             <tr>
-                <td>Artist 2</td>
-                <td>Title 2</td>
-                <td>Angielskie</td>
+            <td>BABYMETAL</td>
+            <td>Karate</td>
+            <td>Japońskie</td>
             </tr>
             <tr>
-                <td>Artist 3</td>
-                <td>Title 3</td>
-                <td>Koreańskie</td>
+            <td>BABYMETAL</td>
+            <td>Megitsune</td>
+            <td>Japońskie</td>
             </tr>
             <tr>
-                <td>Artist 4</td>
-                <td>Title 4</td>
-                <td>Inne</td>
+            <td>BABYMETAL</td>
+            <td>Road of Resistance</td>
+            <td>Japońskie</td>
+            </tr>
+            <tr>
+            <td>Ado</td>
+            <td>Usseewa</td>
+            <td>Japońskie</td>
+            </tr>
+            <tr>
+            <td>Imagine Dragons</td>
+            <td>Believer</td>
+            <td>Angielskie</td>
+            </tr>
+            <tr>
+            <td>Aurora</td>
+            <td>Runaway</td>
+            <td>Angielskie</td>
+            </tr>
+            <tr>
+            <td>Dawid Podsiadło</td>
+            <td>Małomiasteczkowy</td>
+            <td>Polskie</td>
+            </tr>
+            <tr>
+            <td>Sanah</td>
+            <td>Szampan</td>
+            <td>Polskie</td>
             </tr>
         </tbody>
     </table>
