Refactor Firebase script imports to use a single script tag for improved efficiency

--- a/ultrastar/master.html
+++ b/ultrastar/master.html
@@ -48,9 +48,7 @@
         <button onclick="changeCounter(1)">➕</button>
         <button onclick="resetCounter()">🔄</button>
     </div>
-    <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/12.3.0/firebase.js"></script>
     <script>
         // Your web app's Firebase configuration
         const firebaseConfig = {
