Update: increment version to v1.5 and replace external script link with local file

--- a/saphi/index.html
+++ b/saphi/index.html
@@ -202,7 +202,7 @@
 </head>
 <body>
     <div class="wrap">
-        <h1>Porównanie speedrunów CTR <small style="font-size: 0.5em; color: var(--muted);">(v1.4)</small></h1>
+        <h1>Porównanie speedrunów CTR <small style="font-size: 0.5em; color: var(--muted);">(v1.5)</small></h1>
         <p class="subtitle">Porównanie wyników dwóch graczy w Crash Team Racing</p>
 
         <div class="legend" id="legend">
@@ -267,7 +267,7 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/gh/Parking-Master/viewsource/vs.js"></script>
+    <script src="vs.js"></script>
     <script>
         console.log(getSource('https://5ever.crashteamranking.com/ctr/pr.php?id=58'));
     </script>
